feat: improve storage overlay functionality with optimized rendering and input handling